# Recomendador

./: .md  CMakeLists.txt
include/: algoritmos.h  digrafo.h  recomendador.h  relatorio.h  vocab.h
src/: algoritmos.c  digrafo.c  main.c  recomendador.c  relatorio.c  vocab.c
